--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,17 @@
 body{
-	background: blue;
+	background: white;
 	border: 1px solid red;
 	color: black;
 	font-size: 16px;
 	margin: 0px auto;
 	max-width: 1024px;
+}
+footer{
+	background: orange;
+	color: white;
+	font-size: 12px;
+	text-align: center;
+	width: 100%;
 }
 header{
 	text-align: center;
@@ -17,7 +24,7 @@ header img{
 }
 header nav ul li{
 	/*border 1px solid tomato*/
-	background: blue;
+	background: orange;
 	border-radius: 10px;
 	box-shadow: 5px 5px 5px black;
 	color: white;
@@ -28,6 +35,6 @@ header nav ul li{
 }
 header nav ul li:hover{
 	/*efecto para cuando se pasa el rato por encima de la caja*/
-	background: white;
-	color: blue;
+	background: blue;
+	color: white;
 }
